--- a/src/app/components/posts/post-create/post-create.component.html
+++ b/src/app/components/posts/post-create/post-create.component.html
@@ -1,10 +1,15 @@
 <mat-card>
   <mat-form-field>
+    <label for="enteredTitle">Title</label>
+    <input matInput type="text" [(ngModel)]="enteredTitle" />
+  </mat-form-field>
+  <mat-form-field>
+    <label for="enteredContent">Content</label>
     <textarea
       matInput
       rows="6"
       type="text"
-      [(ngModel)]="enteredPost"
+      [(ngModel)]="enteredContent"
     ></textarea>
   </mat-form-field>
   <button mat-raised-button color="primary" (click)="onAddPost()">
